--- a/index.html
+++ b/index.html
@@ -1933,10 +1933,14 @@
                                                                             box-shadow: var(--box-shadow);
                                                                             border-left: 4px solid var(--primary);
                                                                             transition: var(--transition);
-                                                                            min-height: 160px;
-                                                                            height: 100%;
+                                                                            min-height: 120px;
                                                                             display: flex;
                                                                             flex-direction: column;
+                                                                        }
+
+                                                                        .stat-card.small-card {
+                                                                            min-height: 80px;
+                                                                            padding: 15px;
                                                                         }
 
                                                                         .stat-card .stat-value {
@@ -4759,7 +4763,7 @@
                                                                         <div class="stat-label">Academic Status</div>
                                                                     </div>
 
-                                                                                            <div class="stat-card">
+                                                                                            <div class="stat-card small-card">
                                                                                                 <div class="stat-value">
                                                                                                     <div style="display:flex;flex-direction:column;gap:6px;">
                                                                                                         <div style="text-align:center;">
