--- a/index.html
+++ b/index.html
@@ -4731,16 +4731,19 @@
                                                                                             <div class="stat-card" id="ojt-summary-card">
                                                                                                 <div class="stat-value" id="ojt-summary">
                                                                                                     <div style="display:flex;flex-direction:column;gap:6px;">
-                                                
+                                
                                                                                                         <div style="display:flex;align-items:center;">
                                                                                                             <span style="color:var(--text-color);font-size:16px;line-height:1.4;">ICCT Colleges INC. Antipolo Campus</span>
+                                                                                                        </div>
+                                                                                                        <div style="display:flex;align-items:center;">
+                                                                                                            <small style="color:var(--gray);font-size:12px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. cor. Ressurection St.,
+                                                                                                                Bgy. San Roque, Antipolo City, Rizal
+                                                                                                            </small>
                                                                                                         </div>
                                                                                                     </div>
                                                                                                 </div>
                                                                                                 <div class="stat-label">OJT/Intern</div>
-                                                                                            </div>
-
-                                                                                            <div class="stat-card" id="uniforms-summary-card">
+                                                                                            </div>                                                                                            <div class="stat-card" id="uniforms-summary-card">
                                                                                                 <div class="stat-value" id="uniforms-summary">
                                                                                                     <div style="display:flex;flex-direction:column;gap:6px;">
                                                                                                         <div style="display:flex;justify-content:space-between;align-items:center;">
@@ -6881,7 +6884,6 @@
                                                                                                         <i class="fas fa-stethoscope"></i>
                                                                                                     </div>
                                                                                                     <div class="overview-content">
-                                                                                                        <h3 style="margin: 0 0 8px 0; font-size: 18px; font-weight: 700; color: var(--text-color);">Physical Exam</h3>
                                                                                                         <h4 style="color: var(--success); margin: 0 0 8px 0; font-size: 15px; font-weight: 600;">Health Assesment</h4>
                                                                                                         <p style="color: var(--gray); margin: 0; font-size: 13px; line-height: 1.5;">Student's General Physical Exam Results, Vital Signs, and Physician's Findings.</p>
                                                                                                     </div>
@@ -6897,7 +6899,6 @@
                                                                                                         <i class="fas fa-vial"></i>
                                                                                                     </div>
                                                                                                     <div class="overview-content">
-                                                                                                        <h3 style="margin: 0 0 8px 0; font-size: 18px; font-weight: 700; color: var(--text-color);">Drug Test</h3>
                                                                                                         <h4 style="color: var(--primary); margin: 0 0 8px 0; font-size: 15px; font-weight: 600;">Substance Screening</h4>
                                                                                                         <p style="color: var(--gray); margin: 0; font-size: 13px; line-height: 1.5;">Records of Drug Testing results and compliance with School/CHED</p>
                                                                                                     </div>
@@ -6913,7 +6914,6 @@
                                                                                                         <i class="fas fa-x-ray"></i>
                                                                                                     </div>
                                                                                                     <div class="overview-content">
-                                                                                                        <h3 style="margin: 0 0 8px 0; font-size: 18px; font-weight: 700; color: var(--text-color);">X-ray</h3>
                                                                                                         <h4 style="color: var(--accent); margin: 0 0 8px 0; font-size: 15px; font-weight: 600;">Radiology Report</h4>
                                                                                                         <p style="color: var(--gray); margin: 0; font-size: 13px; line-height: 1.5;">Repository of X-ray or imaging results required for medical clearance.</p>
                                                                                                     </div>
@@ -6929,7 +6929,6 @@
                                                                                                         <i class="fas fa-syringe"></i>
                                                                                                     </div>
                                                                                                     <div class="overview-content">
-                                                                                                        <h3 style="margin: 0 0 8px 0; font-size: 18px; font-weight: 700; color: var(--text-color);">Vaccination</h3>
                                                                                                         <h4 style="color: var(--info); margin: 0 0 8px 0; font-size: 15px; font-weight: 600;">Immunization Record</h4>
                                                                                                         <p style="color: var(--gray); margin: 0; font-size: 13px; line-height: 1.5;">Tracks vaccines received (e.g., Hepatitis B, MMR, COVID-19, etc.) with validity dates.</p>
                                                                                                     </div>
