Shorten year labels in index.html

--- a/index.html
+++ b/index.html
@@ -4843,28 +4843,28 @@
                                                                                                         </div>
                                                                                                         <div style="display:flex;flex-direction:column;gap:4px;">
                                                                                                             <div style="display:flex;justify-content:space-between;align-items:center;">
-                                                                                                                <small style="color:var(--text-color);">1st Year</small>
+                                                                                                                <small style="color:var(--text-color);">1st ...</small>
                                                                                                                 <div style="display:flex;align-items:center;gap:4px;">
                                                                                                                     <small style="color:var(--gray);">Sep 15, 2022</small>
                                                                                                                     <i class="fas fa-check-circle" style="color:var(--success)"></i>
                                                                                                                 </div>
                                                                                                             </div>
                                                                                                             <div style="display:flex;justify-content:space-between;align-items:center;">
-                                                                                                                <small style="color:var(--text-color);">2nd Year</small>
+                                                                                                                <small style="color:var(--text-color);">2nd ...</small>
                                                                                                                 <div style="display:flex;align-items:center;gap:4px;">
                                                                                                                     <small style="color:var(--gray);">Sep 18, 2023</small>
                                                                                                                     <i class="fas fa-check-circle" style="color:var(--success)"></i>
                                                                                                                 </div>
                                                                                                             </div>
                                                                                                             <div style="display:flex;justify-content:space-between;align-items:center;">
-                                                                                                                <small style="color:var(--text-color);">3rd Year</small>
+                                                                                                                <small style="color:var(--text-color);">3rd ...</small>
                                                                                                                 <div style="display:flex;align-items:center;gap:4px;">
                                                                                                                     <small style="color:var(--gray);">Sep 18, 2023</small>
                                                                                                                     <i class="fas fa-check-circle" style="color:var(--success)"></i>
                                                                                                                 </div>
                                                                                                             </div>
                                                                                                             <div style="display:flex;justify-content:space-between;align-items:center;">
-                                                                                                                <small style="color:var(--text-color);">4th Year</small>
+                                                                                                                <small style="color:var(--text-color);">4th ...</small>
                                                                                                                 <div style="display:flex;align-items:center;gap:4px;">
                                                                                                                     <small style="color:var(--gray);">Sep 16, 2025</small>
                                                                                                                     <i class="fas fa-check-circle" style="color:var(--success)"></i>
