--- a/index.html
+++ b/index.html
@@ -6467,7 +6467,7 @@
                                                                                                         </div>
                                                                                                     </div>
 
-                                                                                                    <div class="uniform-card uniform-option" data-program="NSTP" data-category="college">
+                                                                                                    <div class="uniform-card uniform-option selected-program" data-program="NSTP" data-category="college">
                                                                                                         <div class="uniform-card-icon">
                                                                                                             <i class="fas fa-flag"></i>
                                                                                                         </div>
