Update medical terms in index.html

--- a/index.html
+++ b/index.html
@@ -4643,7 +4643,7 @@
                                                                                             <a href="#"><i class="fas fa-tshirt"></i> Uniforms</a>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="medical">
-                                                                                            <a href="#"><i class="fas fa-clinic-medical"></i> Medical</a>
+                                                                                            <a href="#"><i class="fas fa-clinic-medical"></i> Wellness & Care</a>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="enrollment">
                                                                                             <a href="#"><i class="fas fa-user-check"></i> Enrollment</a>
@@ -6948,14 +6948,14 @@
                                                                                         <div class="modal-content glass-modal">
                                                                                             <div class="modal-header">
                                                                                                 <h2 class="modal-title">
-                                                                                                    <i class="fas fa-vial"></i> Drug Test Application History
+                                                                                                    <i class="fas fa-vial"></i> Substance Screening Report
                                                                                                 </h2>
                                                                                             </div>
                                                                                             <div class="modal-body">
                                                                                                 <div class="document-preview" style="padding: 30px;">
                                                                                                     <div style="max-width: 800px; margin: 0 auto;">
                                                                                                         <div style="margin-bottom: 30px;">
-                                                                                                            <h4 style="font-size: 18px; margin-bottom: 15px;">Drug Test History</h4>
+                                                                                                            <h4 style="font-size: 18px; margin-bottom: 15px;">Substance Screening History</h4>
                                                                                                             
                                                                                                             <div style="display: flex; flex-direction: column; gap: 15px;">
                                                                                                                 <div style="display: flex; align-items: center; gap: 15px; padding: 15px; border-radius: var(--border-radius); background: rgba(40, 167, 69, 0.1);">
@@ -7015,7 +7015,7 @@
                                                                                         <div class="modal-content glass-modal">
                                                                                             <div class="modal-header">
                                                                                                 <h2 class="modal-title">
-                                                                                                    <i class="fas fa-x-ray"></i> X-Ray Medical Imaging Records
+                                                                                                    <i class="fas fa-x-ray"></i> Radiology Report
                                                                                                 </h2>
                                                                                             </div>
                                                                                             <div class="modal-body">
@@ -7135,7 +7135,7 @@
                                                                                         <div class="modal-content glass-modal">
                                                                                             <div class="modal-header">
                                                                                                 <h2 class="modal-title">
-                                                                                                    <i class="fas fa-stethoscope"></i> Physical Examination Records
+                                                                                                    <i class="fas fa-stethoscope"></i> Health Assesment Records
                                                                                                 </h2>
                                                                                             </div>
                                                                                             <div class="modal-body">
@@ -7144,10 +7144,10 @@
                                                                                                         <!-- Overall Progress -->
                                                                                                         <div style="background: linear-gradient(135deg, var(--primary), var(--primary-light)); color: white; padding: 20px; border-radius: var(--border-radius); margin-bottom: 30px; text-align: center;">
                                                                                                             <h3 style="margin: 0 0 10px 0; font-size: 24px;">
-                                                                                                                <i class="fas fa-chart-line"></i> Medical Examination Progress
+                                                                                                                <i class="fas fa-chart-line"></i> Health Assesment Progress
                                                                                                             </h3>
                                                                                                             <div style="font-size: 48px; font-weight: bold; margin-bottom: 10px;" id="overall-medical-progress">75%</div>
-                                                                                                            <div style="font-size: 16px;">Overall Completion</div>
+                                                                                                            <div style="font-size: 16px;">Overall Fitness</div>
                                                                                                             <div style="width: 100%; height: 8px; background: rgba(255,255,255,0.3); border-radius: 4px; margin-top: 15px;">
                                                                                                                 <div style="width: 75%; height: 100%; background: white; border-radius: 4px;" id="overall-progress-bar"></div>
                                                                                                             </div>
